# openal-android-sample

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/ca/mcgill/cim/srl/sample3daudio/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
openAL4Android/: build.gradle
openAL4Android/src/main/: AndroidManifest.xml
openAL4Android/src/main/jni/: Android.mk  CMakeLists.txt  openalwrapper.c  org_pielot_openal_OpenAlBridge.c
